# Curso-Empotrado

./: c.c  libreria.c  makefile
Proyecto_Final/: .setup_finalproject.sh.swp  README  config_busybox-1.17.4  setup_finalproject.sh
Proyecto_Final/tarea2/: Makefile.am  autogen.sh  configure.ac  makefiletarea2  tarea2.c  tarea2lib.c
Tarea3/: client.c  client_threads.c  index.html  makefile  nweb.c  nweb_threads.c  script.cgi  script.php  test.htm
